[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/icon.tscn" type="PackedScene" id=1]
[ext_resource path="res://telas placeholder/Sem grid/multiplicação.png" type="Texture" id=2]
[ext_resource path="res://scenes/nave.tscn" type="PackedScene" id=3]
[ext_resource path="res://Voguing.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/RichTextLabel_perg_me.gd" type="Script" id=5]
[ext_resource path="res://scenes/me_botao_1.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/me_botao_2.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/me_botao_3.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/me_botao_4.tscn" type="PackedScene" id=9]
[ext_resource path="res://telas placeholder/Sem grid/darkbg.png" type="Texture" id=10]
[ext_resource path="res://telas placeholder/Sem grid/acertou.png" type="Texture" id=11]
[ext_resource path="res://telas placeholder/Sem grid/errou.png" type="Texture" id=12]
[ext_resource path="res://scenes/me_botao_acertou.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/me_botao_errou.tscn" type="PackedScene" id=14]

[node name="Node" type="Node"]

[node name="Node2D" parent="." index="0" instance=ExtResource( 1 )]

position = Vector2( 1332, 1304.95 )

[node name="tela placeholder" type="Sprite" parent="." index="1"]

position = Vector2( 457.396, 804.71 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="nave" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( -293.04, 1386.4 )
scale = Vector2( 1, 1 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="text_pergunta" type="RichTextLabel" parent="." index="3" groups=[
"me_question",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 46.0
margin_top = 341.0
margin_right = 462.0
margin_bottom = 432.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.00390625, 0.00186157, 0.00186157, 1 )
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
script = ExtResource( 5 )
_sections_unfolded = [ "BBCode" ]
__meta__ = {
"_edit_lock_": true
}

[node name="text_resposta1" type="RichTextLabel" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_top = 629.0
margin_right = 458.0
margin_bottom = 657.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.00390625, 0.00186157, 0.00186157, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Mouse" ]

[node name="text_resposta2" type="RichTextLabel" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 130.0
margin_top = 837.0
margin_right = 464.0
margin_bottom = 865.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.00390625, 0.00186157, 0.00186157, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Mouse" ]

[node name="text_resposta3" type="RichTextLabel" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 125.0
margin_top = 1029.0
margin_right = 465.0
margin_bottom = 1057.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.00390625, 0.00186157, 0.00186157, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Mouse" ]

[node name="text_resposta4" type="RichTextLabel" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 117.0
margin_top = 1234.0
margin_right = 457.0
margin_bottom = 1262.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.00390625, 0.00186157, 0.00186157, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Mouse" ]

[node name="timerText" type="RichTextLabel" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.06007
anchor_bottom = 0.0
margin_left = 612.0
margin_top = 1474.0
margin_right = 645.336
margin_bottom = 1511.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.00390625, 0.00186157, 0.00186157, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Mouse", "custom_fonts" ]

[node name="botao1" parent="." index="9" instance=ExtResource( 6 )]

position = Vector2( 431.753, 652.144 )
z_index = 1
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="botao2" parent="." index="10" instance=ExtResource( 7 )]

position = Vector2( 458.317, 861.971 )

[node name="botao3" parent="." index="11" instance=ExtResource( 8 )]

position = Vector2( 462.111, 1056.09 )

[node name="botao4" parent="." index="12" instance=ExtResource( 9 )]

position = Vector2( 451.137, 1260.31 )

[node name="darkbg" type="Sprite" parent="." index="13"]

visible = false
position = Vector2( 457.396, 807.499 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform" ]

[node name="acertou" type="Sprite" parent="." index="14"]

visible = false
position = Vector2( 460.837, 872.431 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="errou" type="Sprite" parent="." index="15"]

visible = false
position = Vector2( 460.837, 872.431 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 12 )
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="16"]

process_mode = 1
wait_time = 50.0
one_shot = false
autostart = true

[node name="proximo" parent="." index="17" instance=ExtResource( 13 )]

visible = false
position = Vector2( 455.719, 1005.18 )
_sections_unfolded = [ "Transform" ]

[node name="aprender" parent="." index="18" instance=ExtResource( 14 )]

visible = false
position = Vector2( 467.366, 936.08 )
scale = Vector2( -1.01134, -0.980086 )
z_index = 1


